--- a/ODR_2024_1_22.ipynb
+++ b/ODR_2024_1_22.ipynb
@@ -23,9 +23,9 @@
         "id": "dOxNKQ3hlNC3"
       },
       "source": [
-        "## [Differential Equations Based Models in Stan](https://mc-stan.org/events/stancon2017-notebooks/stancon2017-margossian-gillespie-ode.html)\n",
+        "## [ODE Based Models in Stan](https://mc-stan.org/events/stancon2017-notebooks/stancon2017-margossian-gillespie-ode.html)\n",
         "\n",
-        "## [Example: simple harmonic oscillator](https://mc-stan.org/docs/stan-users-guide/example-simple-harmonic-oscillator.html#example-simple-harmonic-oscillator)"
+        "#### [Example: simple harmonic oscillator](https://mc-stan.org/docs/stan-users-guide/example-simple-harmonic-oscillator.html#example-simple-harmonic-oscillator)"
       ]
     },
     {
@@ -34,7 +34,7 @@
         "id": "5-_qUPWsma8A"
       },
       "source": [
-        "[Bayesian workflow for disease transmission modeling in Stan](https://mc-stan.org/users/documentation/case-studies/boarding_school_case_study.html)"
+        "#### [Bayesian workflow for disease transmission modeling in Stan](https://mc-stan.org/users/documentation/case-studies/boarding_school_case_study.html)"
       ]
     },
     {
@@ -43,7 +43,7 @@
         "id": "fyw0KYdenB2w"
       },
       "source": [
-        "[ Ordinary differential equation (ODE) solvers](https://mc-stan.org/docs/functions-reference/functions-ode-solver.html#functions-ode-solver)"
+        "#### [ Ordinary differential equation (ODE) solvers](https://mc-stan.org/docs/functions-reference/functions-ode-solver.html#functions-ode-solver)\n"
       ]
     },
     {
@@ -96,7 +96,13 @@
           "output_type": "stream",
           "text": [
             "Loading required package: StanHeaders\n",
-            "\n",
+            "\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
             "\n",
             "rstan version 2.32.5 (Stan version 2.32.2)\n",
             "\n",
@@ -114,7 +120,8 @@
         }
       ],
       "source": [
-        "library(rstan)"
+        "library(rstan)\n",
+        "library(gridExtra)"
       ]
     },
     {
